--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,8 @@
     "react-loader-spinner": "^5.4.5",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
