--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "socket.io": "^4.7.2",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
   },
