--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bufferutil": "^4.0.7",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
