--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-loading-skeleton": "^3.3.1",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "utf-8-validate": "^5.0.10",
